--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
 </noscript>
 <div id="app"></div>
 <!-- built files will be auto injected -->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
